--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -59,5 +59,65 @@
     .click-box{
         display: none;
     }
-    
+    .top-sec-div a{
+        margin-left: 20px;
+    }
+}
+
+@media(max-width:610px){
+    .top-sec-div a{
+        margin-left: 20px;
+    }
+    .input{
+        display:flex;
+    }
+    .head-div{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        padding: 20px 0;
+    }
+    .head-div-left{
+        width: 100%;
+    }
+}
+@media(max-width:500px){
+    .head-div-right{
+        justify-content: start;
+    }
+   .head-div-left{
+    flex-direction: column;
+   }
+   input{
+    padding: 7px;
+   }
+    .login-button{
+        padding:6px 20px;
+    }
+    .top-div2-para{
+        flex-direction: column;
+        align-items: start;
+        justify-content: start;
+        gap: 2px;
+    }
+    .top-div{
+        flex-direction: column;
+        align-items: start;
+        gap: 7px;
+    }
+    .span-deal, #book{
+        font-size: 1rem;
+    }
+    .text-box{
+        margin-right: 20px;
+    }
+    .view-btn, .top-div-para, #book{
+        margin: 0 auto;
+    }
+    #shop{
+        margin-right: 20px;
+        display: block;
+        text-align: center;
+    }
 }
